# GlobalKey

./: .gitignore  .gitmodules  CMakeLists.txt  GKAboutDialog.cpp  GKAboutDialog.h  GKAboutDialog.ui  GKApplication.h  README.md  cmake-gen.py  main.cpp
GlobalKey/: CMakeLists.txt  GK.cpp  GK.h  GKAboutDialog.cpp  GKApp.cpp  GKApp.h  GKAppFactory.cpp  GKAppFactory.h  GKApplication.cpp  GKApplicationService.cpp  GKApplicationService.h  GKConfig.cpp  GKConfig.h  GKDialog.cpp  GKDialog.h  GKDialog.ui  GKHotKey.cpp  GKHotKey.h  GKItem.cpp  GKItem.h  GKLog.h  GKMac.h  GKMacImp.h  GKMacImp.mm  GKProxyApp.cpp  GKProxyApp.h  GKResources.qrc  GKSystem.cpp  GKSystem.h  GKSystemTray.h  GKTask.cpp  GKTask.h  GKWidget.cpp  GKWidget.h  GKWidget.ui  GKWidgetItem.cpp  GKWidgetItem.h  GKWidgetItem.ui  GKWin.cpp  GKWin.h  (+3 more)
GlobalKey/Resources/: Resources.qrc
GlobalKey/macOS/: plist.in
GlobalKey/macOS/Assets.xcassets/ConfigTemplate.dataset/: Contents.json  config.plist
GlobalKey/win32/: App.cpp  Resource.aps  Resource.h  Resource.rc
GlobalKeyApp/: CMakeLists.txt  GKAppConfig.cpp  GKAppConfig.h  GKAppHotKeyManager.cpp  GKAppHotKeyManager.h  GKApplicationService.cpp  GKApplicationService.h  GKArgs.cpp  GKArgs.h  GKCommand.cpp  GKCommand.h  GKConfig.cpp  GKConfig.h  GKCoreApp.cpp  GKCoreApp.h  GKSystemService.cpp  GKSystemService.h  GKSystemServiceMac.cpp  GKSystemServiceMac.mm  GKSystemServiceWin.cpp  GKTask.cpp  GKTask.h
GlobalKeyApp/macOS/: AppDelegate.h  AppDelegate.mm  ToastMessageWindow.h  ToastMessageWindow.m  main.cpp  main.mm  plist.in
GlobalKeyApp/macOS/Assets.xcassets/Caffeinate.imageset/: Contents.json
GlobalKeyApp/macOS/Assets.xcassets/TrayIcon.imageset/: Contents.json
GlobalKeyApp/macOS/Assets.xcassets/vol.imageset/: Contents.json
GlobalKeyApp/win32/: Resource.aps  Resource.h  Resource.rc  main.cpp
GlobalKeyLib/: CMakeLists.txt  GK.h  GKHotKey.cpp  GKHotKey.h  GKHotKeyMac.mm  GKHotkey.cpp  GKHotkey.h  GKHotkeyMac.h  GKHotkeyWin.cpp  GKHotkeyWin.h  GKMac.h  GKMac.mm  GKProxyApp.cpp  GKProxyApp.h  GKProxyAppMac.h  GKProxyAppMac.mm  GKProxyAppWin.cpp  GKProxyAppWin.h  GKSystem.cpp  GKSystem.h  GKWin.cpp  GKWin.h
Gtk/: gtk-app-quick-switch.py
